// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when not required renders the expected component with an optional tag 1`] = `
<div>
  <div
    class="TextGroup-sc-127gh0a-0 text__c-txt___14ptu fjQWCj"
    data-garden-id="textfields.text_group"
    data-garden-version="3.7.0"
  >
    <label
      class="Label-sc-129v0bx-0 text__c-txt__label___11SEJ jcOpUC"
      data-garden-id="textfields.label"
      data-garden-version="3.7.0"
    >
      <strong>
        this is a label
      </strong>
       (optional)
    </label>
    <div
      class="Hint-sc-1pcaoos-0 text__c-txt__hint___2Tn9V RvEHv"
      data-garden-id="textfields.hint"
      data-garden-version="3.7.0"
      id="garden-text-field-2--hint"
    >
      description of field
    </div>
    <textarea
      aria-describedby="garden-text-field-2--hint"
      aria-invalid="false"
      aria-labelledby="garden-text-field-2--label"
      class="Textarea-sc-1alsvvb-0 text__c-txt__input--area___3VBq- dcOmlb Input-sc-4gf5js-0-textarea text__c-txt__input___2ZeOl kpjxwv"
      data-garden-id="textfields.textarea"
      data-garden-version="3.7.0"
      id="garden-text-field-2--input"
      name="text"
    />
  </div>
</div>
`;

exports[`when required renders the expected component 1`] = `
<div>
  <div
    class="TextGroup-sc-127gh0a-0 text__c-txt___14ptu fjQWCj"
    data-garden-id="textfields.text_group"
    data-garden-version="3.7.0"
  >
    <label
      class="Label-sc-129v0bx-0 text__c-txt__label___11SEJ jcOpUC"
      data-garden-id="textfields.label"
      data-garden-version="3.7.0"
    >
      <strong>
        this is a label
      </strong>
    </label>
    <div
      class="Hint-sc-1pcaoos-0 text__c-txt__hint___2Tn9V RvEHv"
      data-garden-id="textfields.hint"
      data-garden-version="3.7.0"
      id="garden-text-field-0--hint"
    >
      description of field
    </div>
    <textarea
      aria-describedby="garden-text-field-0--hint"
      aria-invalid="false"
      aria-labelledby="garden-text-field-0--label"
      class="Textarea-sc-1alsvvb-0 text__c-txt__input--area___3VBq- dcOmlb Input-sc-4gf5js-0-textarea text__c-txt__input___2ZeOl kpjxwv"
      data-garden-id="textfields.textarea"
      data-garden-version="3.7.0"
      id="garden-text-field-0--input"
      name="text"
    />
  </div>
</div>
`;
